--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sitemap-generator-cli": "^7.5.0",
     "vite": "^5.2.0"
   }
 }
